fix: Edit class, wide tile wrap, paddings, shadows

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,17 +257,18 @@ body {
 .advantages__item--wide {
   grid-column: span 3;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   color: #ffffff;
   background-color: #82b3d3;
 }
 
-.advantages__item--reverse {
+.advantages__item--wide-reverse {
   flex-direction: row-reverse;
 }
 
 .advantages__item-img {
-  flex-grow: 1;
+  width: calc(100% * 2 / 3);
   height: auto;
 }
 
@@ -290,7 +291,6 @@ body {
 }
 
 .advantages__item--wide .tile {
-  flex-shrink: 0;
   width: calc(100% / 3);
   background-color: rgba(0, 0, 0, 0);
 }
@@ -390,7 +390,7 @@ body {
 .subscribe__input {
   width: 100%;
   height: 100%;
-  padding-left: 20px;
+  padding: 0 20px;
   font-family: inherit;
   font-size: 18px;
   line-height: 24px;
@@ -569,7 +569,7 @@ body {
   grid-row: 1;
   grid-column: 1;
   width: 143px;
-  padding: 13px 25px 11px 20px;
+  padding: 13px 30px 11px 20px;
   font-family: inherit;
   font-size: 18px;
   line-height: 24px;
@@ -614,12 +614,11 @@ body {
 .catalog__sort {
   min-width: 292px;
   margin: 0 70px;
-  padding: 14px 0 14px 20px;
+  padding: 12px 55px 12px 20px;
   font: inherit;
   line-height: 21px;
   color: #333333;
-  border: none;
-  box-shadow: inset 0 0 0 2px #e5e5e5;
+  border: 2px solid #e5e5e5;
   appearance: none;
 }
 
@@ -629,24 +628,21 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
-  max-width: 272px;
+  max-width: 216px;
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-.catalog__group-item {
-  box-shadow: inset 0 0 0 2px #e5e5e5;
-}
-
-.catalog__group-item--active {
-  box-shadow: inset 0 0 0 2px #000000;
-}
-
-.catalog__group-link {
+.catalog__group-button {
   display: block;
   width: 48px;
   height: 48px;
+  border: 2px solid #e5e5e5;
+}
+
+.catalog__group-button--active {
+  border: 2px solid #000000;
 }
 
 /* Hotels */
@@ -743,7 +739,8 @@ body {
   justify-content: center;
   align-items: center;
   min-width: 60px;
-  padding: 12px 8px;
+  min-height: 60px;
+  padding: 12px 10px;
   font-size: 20px;
   line-height: 36px;
 }
